--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Objc.string : Self-contained library for efficient string manipulation in Objective-C. " />
+    <meta name="description" content="objc.string : Self-contained library for efficient string manipulation in Objective-C. " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Objc.string</title>
+    <title>objc.string</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/alco/objc.string">Fork Me on GitHub</a>
 
-          <h1 id="project_title">Objc.string</h1>
+          <h1 id="project_title">objc.string</h1>
           <h2 id="project_tagline">Self-contained library for efficient string manipulation in Objective-C. </h2>
 
           <section id="downloads">
@@ -146,7 +146,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Objc.string maintained by <a href="https://github.com/alco">alco</a></p>
+        <p class="copyright">objc.string maintained by <a href="https://github.com/alco">alco</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
